tests/tests/failing_examples/already_owned_in_correect_scope.rs
use hoist_temporaries::hoist_temporaries;

#[hoist_temporaries(food)]
fn main() {
    let owned = String::from("owned");
    let mut food: &str = "Cheese";
    if true {
        food = &owned;
    }
    assert_eq!(food, "owned");
    println!("{}", owned);
}
